--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   PostgreSQL-Tests:
-    if: "!contains(github.event.head_commit.message, '[skip tests]')"
+    if: "!contains(github.event.head_commit.message, '[skip tests]') || !contains(github.event.inputs.commitMessage, '[skip tests]')"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -28,7 +28,7 @@ jobs:
         run: echo ${GITHUB_REF_NAME}
 
   Deploy:
-    if: startsWith(github.ref_name, 'feature')
+    if: startsWith(github.ref_name, 'master')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
