--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -3,6 +3,7 @@ name: dsync services
 on:
   push:
     branches:
+      - master
       - 'fix/**'
   workflow_dispatch:
     inputs:
@@ -12,7 +13,7 @@ on:
 
 jobs:
   PostgreSQL-Tests:
-    if: " (!contains(github.event.head_commit.message, '[skip tests]') || !contains(github.event.inputs.commitMessage, '[skip tests]'))"
+    if: " (!contains(github.event.head_commit.message, '[skip tests]') || ${{ github.event.inputs.commitMessage }}==[skip tests])"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
