--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   PostgreSQL-Tests:
-    if: " (!contains(github.event.head_commit.message, '[skip tests]') || ${{ github.event.inputs.commitMessage }}==[skip tests])"
+    if: " ${{ github.event.inputs.commitMessage }}=='[skip tests]' "
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
