--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   PostgreSQL-Tests:
-    if: " ${{ github.event.inputs.commitMessage }}=='[skip tests]' "
+    if: " ${{ github.event.inputs.commitMessage }}!='[skip tests]' "
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -42,5 +42,5 @@ jobs:
           distribution: adopt
           java-version: 11
 
-      - name: Run script
+      - name: ${{ github.event.inputs.commitMessage }} Run script
         run: echo "hEllo world"
