--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   PostgreSQL-Tests:
-    if: " ${{ github.event.inputs.commitMessage }}!='[skip tests]' "
+    if: " !contains(inputs.commitMessage, '[skip tests]') "
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
