--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -46,7 +46,7 @@ jobs:
 
   Relaease:
     if: ( startsWith(github.ref_name, 'feature/')  || startsWith(github.ref_name, 'support/') || github.ref_name == 'master' )  &&
-        ( ${{ contains(github.event.head_commit.message, '[release]') && inputs.commitMessage == 'release' }} ) &&
+        ${{ contains(github.event.head_commit.message, '[release]') || inputs.commitMessage == 'release' }}  &&
         github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     steps:
