--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -45,9 +45,9 @@ jobs:
         run: echo "hEllo world"
 
   Relaease:
-    if: ( startsWith(github.ref_name, 'feature/')  || startsWith(github.ref_name, 'support/') || github.ref_name == 'master' )  &&
-        ${{ contains(github.event.head_commit.message, '[release]') || inputs.commitMessage == 'release' }}  &&
-        github.event_name != 'pull_request'
+    if: ${{ ( startsWith(github.ref_name, 'feature/')  || startsWith(github.ref_name, 'support/') || github.ref_name == 'master' )  &&
+        contains(github.event.head_commit.message, '[release]') || inputs.commitMessage == 'release'  &&
+        github.event_name != 'pull_request' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
