--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   Run:
-    if: github.ref_name != 'company_release' && ( contains(${{ matrix.stage }}, 'build') || contains(${{ matrix.stage }}, 'e2e_tests') )
+    if: github.ref_name != 'company_release' && ( contains( '${{ matrix.stage }}', 'build') || contains( '${{ matrix.stage }}', 'e2e_tests') )
     runs-on: ubuntu-latest
     strategy:
       matrix:
