--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,4 +1,4 @@
-name: google drive
+name: dsync services
 
 on:
   push:
@@ -14,9 +14,10 @@ on:
       commitMessage:
         description: Enter the Commit Message
         required: true
+env:
+  SRCCLR_API_TOKEN: ${{ secrets.SRCCLR_API_TOKEN }}
 
-jobs:
-  ${{ matrix.stage }}:
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -34,5 +35,40 @@ jobs:
 
       - name: Run ${{ matrix.stage }}
         run: |
-          echo "${{ matrix.stage }}" 
-          echo "hello bro how"
+          echo "hello {{ matrix.stage }}"
+
+  Release:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: adopt
+          java-version: 17
+
+      - name: Run Script
+        run: |
+          echo "hello deploy release"
+
+
+  Company-Release:
+    if: github.ref_name == 'company_release'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: adopt
+          java-version: 17
+
+      - name: Run Script
+        run: |
+          echo "hello deploy release"
