--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -39,6 +39,7 @@ jobs:
           echo "hello {{ matrix.stage }}"
 
   Release:
+    if:  github.ref_name ~= ^(master|SP\/.+|HF\/.+)$/ && contains(github.event.head_commit.message, '[trigger release]')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
