--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -39,7 +39,9 @@ jobs:
           echo "hello {{ matrix.stage }}"
 
   Release:
-    if:  github.ref_name ~= ^(master|SP\/.+|HF\/.+)$/ && contains(github.event.head_commit.message, '[trigger release]')
+    if:  ${{ ( startsWith(github.ref_name, 'HF/')  || startsWith(github.ref_name, 'SP/') || github.ref_name == 'master' )  &&
+         contains(github.event.head_commit.message, '[trigger release]') || inputs.commitMessage == 'release'  &&
+         github.event_name != 'pull_request' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
