--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -38,6 +38,8 @@ jobs:
 
       - name: Run ${{ matrix.stage }}
         run: |
+          echo "${{ github.event.pull_request }}"
+          echo "***************"
           echo "hello {{ matrix.stage }}"
 
   Release:
