--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Run ${{ matrix.stage }}
         run: |
-          echo "${{ github.event.pull_request_ref }}"
+          echo "${{ github.event.pull_request.draft }}"
           echo "***************"
           echo "hello {{ matrix.stage }}"
 
