--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,6 +18,9 @@ on:
         required: true
 env:
   SRCCLR_API_TOKEN: ${{ secrets.SRCCLR_API_TOKEN }}
+  GITHUB_EVENT: ${{ github.event_name }}
+  BRANCH_NAME: ${{ github.ref_name }}
+
 
 jobs:
   build:
