--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -39,6 +39,12 @@ jobs:
           distribution: adopt
           java-version: 17
 
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.8.10
+          cache: 'pip'
+      - run: pip install -r requirements.txt
+
       - name: Run ${{ matrix.stage }}
         run: |
           echo "${{ github.event_name }}"
