--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -42,7 +42,8 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
-          cache: 'pip'
+          cache: pip
+          cache-dependency-path: '**/setup.py'
 
       - name: Run ${{ matrix.stage }}
         run: |
