--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -43,9 +43,10 @@ jobs:
         with:
           python-version: 3.8
 
-      - uses: azure/setup-kubectl@v3
+      - uses: azure/setup-kubectl@v3.0
         with:
-          version: '1.21'
+         version: 'v1.23.6'
+        id: install
 
       - uses: azure/setup-helm@v3
         with:
