--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,7 +24,7 @@ env:
 
 jobs:
   build:
-    runs-on: windows-2019
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         stage: [ build , source_clear, e2e_tests ]
