--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -50,8 +50,7 @@ jobs:
 
       - uses: azure/setup-helm@v3
         with:
-          version: 'default'
-          token: ${{ secrets.GIT_PASSWORD }}
+          version: '1.5.0'
 
       - name: Run ${{ matrix.stage }}
         run: |
