--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -34,6 +34,10 @@ jobs:
         with:
           distribution: adopt
           java-version: 17
+      - uses: azure/setup-helm@v3
+        with:
+          version: v3.8.1
+        id: install
 
       - name: Run ${{ matrix.stage }}
         run: |
