--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -38,6 +38,10 @@ jobs:
         with:
           version: v3.8.1
         id: install
+      - uses: azure/setup-kubectl@v3.0
+        with:
+          version: 'v1.23.6'
+        id: install
 
       - name: Run ${{ matrix.stage }}
         run: |
