--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -42,6 +42,8 @@ jobs:
         with:
           version: 'v1.23.6'
 
+      - uses: prepor/action-aws-iam-authenticator@master
+        run: aws-iam-authenticator version
 
       - name: Run ${{ matrix.stage }}
         run: |
