--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -36,7 +36,7 @@ jobs:
         run: echo "::set-output name=date::$(git log --format=%cd --date=format:%Y-%m-%d --max-count=1)"
 
       - name: Run pipeline if there was a commit this week
-        if: ${{ steps.commit_date.outputs.date && steps.commit_date.outputs.date != '' && steps.commit_date.outputs.date != null && steps.commit_date.outputs.date != format('{0:yyyy-MM-dd}', github.event.scheduled_time) && github.ref == 'refs/heads/main' }}
+        if: ${{ steps.commit_date.outputs.date && steps.commit_date.outputs.date != '' && steps.commit_date.outputs.date != github.event.scheduled_time.substring(0, 10) && github.ref == 'refs/heads/main' }}
         run: |
           # Run your pipeline commands here
           echo "Running the pipeline..."
