--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -31,12 +31,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Check last commit date
+      - name: Get commit date
         id: commit_date
-        run: echo "::set-output name=date::$(git log --format=%cd --date=format:%Y-%m-%d --max-count=1)"
+        run: |
+          COMMIT_DATE=$(git log --format=%cd --date=format:%Y-%m-%d --max-count=1 master)
+          echo "::set-output name=date::$COMMIT_DATE"
 
       - name: Run pipeline if there was a commit this week
-        if: ${{ steps.commit_date.outputs.date && steps.commit_date.outputs.date != '' && steps.commit_date.outputs.date != github.event.scheduled_time.substring(0, 10) && github.ref == 'refs/heads/main' }}
+        if: ${{ steps.commit_date.outputs.date && steps.commit_date.outputs.date != github.event.scheduled_time.substring(0, 10) && github.ref == 'refs/heads/main' }}
         run: |
           # Run your pipeline commands here
           echo "Running the pipeline..."
