--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -30,6 +30,9 @@ jobs:
     steps:
       - name: Checkout code a
         uses: actions/checkout@v2
+      
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
 
       - name: Get commit date
         id: commit_date
