--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -30,4 +30,4 @@ jobs:
         uses: actions/checkout@v2
       
       - name: install Java 18
-        run: python install_java_18.py
+        run: python ci/install_java_18.py
